[gd_scene load_steps=20 format=3 uid="uid://c0kr7j65fg6cs"]

[ext_resource type="Script" uid="uid://je21pjd6lua1" path="res://main_menu.gd" id="1_06t4h"]
[ext_resource type="Texture2D" uid="uid://bbx8wfkpicxv1" path="res://R.jpg" id="2_7vrkn"]
[ext_resource type="Texture2D" uid="uid://dd3s2kwlujtow" path="res://Cool Text - ENDLESS 498040674537503.png" id="3_fu7sn"]
[ext_resource type="Texture2D" uid="uid://machmnm6m2au" path="res://cooltext498041325476337.png" id="3_jix8l"]
[ext_resource type="Texture2D" uid="uid://b3d0xjmvjphmv" path="res://cooltext498041655104189.png" id="4_glbon"]
[ext_resource type="Texture2D" uid="uid://3an2rij5yeup" path="res://cooltext498041818197170.png" id="5_nlkkf"]
[ext_resource type="AudioStream" uid="uid://c655ig7tq4gro" path="res://BLACK OPS 3 ZOMBIES MENU THEME SONG.mp3" id="7_qe12f"]

[sub_resource type="Theme" id="Theme_fu7sn"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jix8l"]
texture = ExtResource("2_7vrkn")

[sub_resource type="Theme" id="Theme_qe12f"]

[sub_resource type="Theme" id="Theme_jix8l"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nlkkf"]
texture = ExtResource("3_jix8l")

[sub_resource type="CanvasTexture" id="CanvasTexture_fu7sn"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qe12f"]
texture = ExtResource("4_glbon")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8qtwp"]
texture = ExtResource("4_glbon")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dy7ct"]
texture = ExtResource("4_glbon")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0o4t1"]
texture = ExtResource("4_glbon")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0k4wn"]
texture = ExtResource("5_nlkkf")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_glbon"]
texture = ExtResource("3_fu7sn")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_fu7sn")
theme_type_variation = &"EDF"
script = ExtResource("1_06t4h")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1008.0
offset_top = -567.0
offset_right = 1027.0
offset_bottom = 564.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_jix8l")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
self_modulate = Color(0.8901533, 0.93848747, 0.97176594, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.512
anchor_top = 0.48600003
anchor_right = 0.512
anchor_bottom = 0.48600003
offset_left = -316.04004
offset_top = -28.880005
offset_right = 405.95996
offset_bottom = 294.12
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_qe12f")
theme_override_constants/separation = 10

[node name="Button" type="Button" parent="VBoxContainer"]
modulate = Color(0.48550063, 0.122252874, 0.12491221, 1)
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_jix8l")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_nlkkf")
icon = SubResource("CanvasTexture_fu7sn")

[node name="Button2" type="Button" parent="VBoxContainer"]
modulate = Color(0.4031223, 0, 0.020105852, 1)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_qe12f")
theme_override_styles/normal_mirrored = SubResource("StyleBoxTexture_8qtwp")
theme_override_styles/pressed = SubResource("StyleBoxTexture_dy7ct")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxTexture_0o4t1")

[node name="Button3" type="Button" parent="VBoxContainer"]
modulate = Color(0.45490196, 0, 0, 1)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_0k4wn")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 450.0
offset_top = 97.0
offset_right = 668.0
offset_bottom = 158.0
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="Label"]
layout_mode = 0
offset_left = -455.0
offset_top = -106.0
offset_right = -34.0
offset_bottom = -32.0
theme_override_styles/panel = SubResource("StyleBoxTexture_glbon")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_qe12f")
volume_db = 24.0
autoplay = true

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_options_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_Exit_pressed"]
